# enterprise-mcp-skill-hub

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: api_contracts.py  bootstrap.py  config.py  demo.py  git_readiness.py  main.py  mcp_server.py  models.py  policy.py  providers.py  security.py  services.py  skills.py  utils.py  validator.py
dashboard/: streamlit_app.py
docs/: api.md  architecture.md  azure-deployment-notes.md  evaluation.md  mcp.md  skill-manifests.md
sample_data/: expected_outputs.json  meeting_notes.txt  policy_ai_governance.md  portfolio_jd_skills.json  product_skill_hub.md  rfp_question.txt  support_ticket.txt  vendor_risk_policy.md  workflow_templates.json
scripts/: dashboard_smoke.py  runtime_check.py  start_demo.ps1
tests/: test_agent_collaboration.py  test_agent_society_eval.py  test_api.py  test_api_contracts.py  test_artifact_inventory.py  test_audit_attestation.py  test_audit_integrity.py  test_capacity.py  test_ci_doctor_audit_pack.py  test_config_hygiene.py  test_conformance_replay.py  test_dashboard_smoke.py  test_dependencies.py  test_enterprise_readiness.py  test_eval_regression.py  test_evidence_security.py  test_final_handoff.py  test_git_readiness.py  test_golden_evals.py  test_governance_snapshot.py  test_hub.py  test_incidents.py  test_invocation_mcp_agent.py  test_invocation_sandbox.py  test_marketplace.py  test_mcp_admission.py  test_platform_operations.py  test_platform_pack.py  test_policy.py  test_policy_replay.py  test_policy_simulation.py  (+28 more)
(+14 files in other folders)
